<resources>
    <string name="app_name">Attendify Student</string>
    <string name="str_name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="txt_class">Class</string>
    <string name="roll_number">Roll Number</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_attendify">Sign up with Attendify</string>
    <string name="welcome_back">Welcome back</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your Profile</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="your_attendance">Your Attendance</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="baseApi">https://testing306.000webhostapp.com/api</string>
    <string name="attendance">Attendance</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
</resources>