<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentRegister"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/backArrow"
                android:background="@null"
                android:backgroundTint="#FFFFFF"
                />
        </LinearLayout>
    </LinearLayout>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_with_attendify"
                        style="@style/teacherRegTitle"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:strokeColor="@color/text_secondary_light"
                    app:strokeWidth="2dp"
                    android:scaleType="fitCenter"
                    style="@style/studentProfileImage"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSelectProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    style="@style/ButtonStyle"
                    android:text="@string/select_profile_image"
                    android:backgroundTint="@color/secondary_bg_light"
                    android:textColor="@color/text_primary_light"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/str_name"
                        android:inputType="text"
                        android:maxLines="1"



                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:hint="@string/txt_class"
                    android:orientation="vertical"
                    app:boxStrokeWidth="2dp"
                    >

                <AutoCompleteTextView
                    android:id="@+id/ddClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"

                    style="@style/DropdownStyle"

                    />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtRollNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/roll_number"
                        android:inputType="number"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtContact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextBoxStyle"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCnfPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:gravity="center"

                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/login"
                    style="@style/ButtonStyle"
                    android:textColor="@color/text_primary_light"
                    android:backgroundTint="@color/secondary_bg_light"
                    android:layout_weight="1"
                    android:layout_marginEnd="12dp"
                    app:cornerRadius="12dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    style="@style/ButtonStyle"
                    android:textColor="@color/button_text_primary_light"
                    android:backgroundTint="@color/primary_bg_light"
                    android:layout_weight="1"

                    />
            </LinearLayout>



        </LinearLayout>



    </ScrollView>




</LinearLayout>